# Quant-Lab

./: .gitignore  CLAUDE.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: test.yml
configs/: default.yaml
dashboard/: app.py  shared.py
dashboard/pages/: 0_data_manager.py  1_position_advise.py  2_market_state.py  3_backtest_compare.py  4_factor_analyze.py  5_params_optimize.py  6_sector_rotation.py  7_macro_factors.py  params_optimize.py
doc/: 01-Engineering_Foundation.md  AKShare 说明.md  Brinson_attribution.md  关于测试 pytest.md  配置类.md
quant/: config.py  pipeline.py
quant/advisor/: __init__.py  position.py
quant/backtest/: engine.py
quant/data/: base.py  cache.py  fund_flow.py  fundamental.py  quality.py  valuation.py
quant/factor/: bollinger.py  combine.py  earnings_quality.py  fund_flow.py  ic.py  idiosyncratic_vol.py  layered.py  ma_bias.py  macd.py  momentum.py  revenue_acceleration.py  rsi.py  skewness.py  turnover.py  valuation_momentum.py  volatility.py
quant/fund/: __init__.py  loader.py
quant/macro/: __init__.py  indicators.py  loader.py
quant/regime/: __init__.py  detector.py
quant/risk/: attribution.py  metrics.py
quant/sector/: __init__.py  loader.py  rotation.py
quant/strategy/: compare.py  factor_strategy.py  ml_alpha.py  pairs_trading.py  pairs_traiding.py
scripts/: backtest_ml.py  backtest_momentum.py  backtest_regime.py  compare_models.py  daily_report.py  download_data.py  download_enriched_data.py  factor_analysis.py  fund_analysis.py  import_price_to_db.py  position_advice.py  regime_detection.py  research_earnings_quality.py  research_factor_analysis.py  research_fund_flow_factor.py  research_revenue_acceleration.py  research_valuation_momentum.py  run.py  test_tushare.py
tests/: test_advisor.py  test_backtest.py  test_cache.py  test_config.py  test_data.py  test_factor.py  test_fund_flow.py  test_fund_loader.py  test_macro_indicators.py  test_macro_loader.py  test_pipeline.py  test_regime.py  test_risk.py  test_sector_loader.py  test_sector_rotation.py  test_strategy.py  test_valuation.py
