[project]
name = "quant-lab"
version = "0.1.0"
description = "这是我的量化交易平台，用于展示自己的量化交易项目"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "akshare>=1.18.55",
    "duckdb>=1.5.2",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "streamlit>=1.56.0",
    "yfinance>=1.2.1",
]

[dependency-groups]
dev = [
    "mypy>=1.20.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.10",
]
