[project]
name = "quant-lab"
version = "0.1.0"
description = "这是我的量化交易平台，用于展示自己的量化交易项目"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "akshare>=1.18.55",
    "duckdb>=1.5.2",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "scipy>=1.17.1",
    "statsmodels>=0.14.6",
    "streamlit>=1.56.0",
    "yfinance>=1.2.1",
]

[dependency-groups]
dev = [
    "mypy>=1.20.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.10",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]  # E/F: 基础错误, I: import 排序（替代 isort）

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=quant --cov-report=term-missing"
