[project]
name = "quant-lab"
version = "0.1.0"
description = "这是我的量化交易平台，用于展示自己的量化交易项目"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "akshare>=1.18.55",
    "duckdb>=1.5.2",
    "lightgbm>=4.6.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "statsmodels>=0.14.6",
    "streamlit>=1.56.0",
    "tushare>=1.4.29",
    "xgboost>=3.2.0",
    "yfinance>=1.2.1",
]

[dependency-groups]
dev = [
    "mypy>=1.20.1",
    "pandas-stubs>=3.0.0.260204",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.10",
    "scipy-stubs>=1.17.1.4",
    "types-pyyaml>=6.0.12.20260408",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]  # E/F: 基础错误, I: import 排序（替代 isort）

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true

# 无 stubs 且不维护 py.typed 的三方库，忽略类型检查
[[tool.mypy.overrides]]
module = [
    "akshare.*",
    "yfinance.*",
    "tushare.*",
    "statsmodels.*",
    "sklearn.*",
    "lightgbm.*",
    "xgboost.*",
    "plotly.*",
    "streamlit.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=quant --cov-report=term-missing"
